--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A small restaurant that serves delicious and refreshing lemon-inspired dishes."
     />
+    <meta property="og:title" content="Little Lemon Restaurant" />
+    <meta property="og:description" content="A small restaurant that serves delicious and refreshing lemon-inspired dishes." />
+    <meta property="og:image" content="%PUBLIC_URL%/Logo.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
