--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,61 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      /*
+        1. Use a more-intuitive box-sizing model.
+      */
+      *, *::before, *::after {
+        box-sizing: border-box;
+      }
+      /*
+        2. Remove default margin
+      */
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      /*
+        3. Allow percentage-based heights in the application
+      */
+      html, body {
+        height: 100%;
+      }
+      /*
+        Typographic tweaks!
+        4. Add accessible line-height
+        5. Improve text rendering
+      */
+      body {
+        line-height: 1.5;
+        -webkit-font-smoothing: antialiased;
+      }
+      /*
+        6. Improve media defaults
+      */
+      img, picture, video, canvas, svg {
+        display: block;
+        max-width: 100%;
+      }
+      /*
+        7. Remove built-in form typography styles
+      */
+      input, button, textarea, select {
+        font: inherit;
+      }
+      /*
+        8. Avoid text overflows
+      */
+      p, h1, h2, h3, h4, h5, h6 {
+        overflow-wrap: break-word;
+      }
+      /*
+        9. Create a root stacking context
+      */
+      #root, #__next {
+        isolation: isolate;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
