--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     <meta property="og:description" content="A small restaurant that serves delicious and refreshing lemon-inspired dishes." />
     <meta property="og:image" content="%PUBLIC_URL%/Logo.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500&display=swap" rel="stylesheet">
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -54,7 +58,7 @@
         5. Improve text rendering
       */
       body {
-        line-height: 1.5;
+        /* line-height: 1.5; */
         -webkit-font-smoothing: antialiased;
       }
       /*
