--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500&display=swap" rel="stylesheet">
 
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
+
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
